# ai-project-playground

./: .env.example  .gitignore  Pipfile  README.md  app.py  chat-app.py  chat.py  document.py  main.py  okr.py  pyproject.toml  requirements.txt  search.py  test.py
apps/: chat-app.py  context-demo.py  document-app.py  okr-app.py  rag-app.py  web-app.py
contexts/: slides.html
examples/: chat.py  code.py  okr.py  search.py
